--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -22,7 +22,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/dataEntry.png">
           </ion-thumbnail>
-          <p >Data Entry</p>
+          <p class="menu-app" >Data Entry</p>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -32,7 +32,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/eventCapture.png">
           </ion-thumbnail>
-          <p >Event Capture</p>
+          <p class="menu-app" >Event Capture</p>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -45,7 +45,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/dashboard.png">
           </ion-thumbnail>
-          <p >Dashboard</p>
+          <p class="menu-app">Dashboard</p>
         </ion-item>
       </ion-list>
     </ion-col>
