--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,6 +21,18 @@
 
   </ion-grid>
 
+  <div *ngIf="!isLoginProcessActive && loadingData">
+    <ion-list>
+      <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+        {{ message }}
+        <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
+        <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+          <ion-spinner name="crescent" color="secondary"></ion-spinner>
+        </div>
+      </ion-item>
+    </ion-list>
+  </div>
+
   <div *ngIf="isLoginProcessActive">
     <page-progress-bar [progress] = "progress"></page-progress-bar>
     <br>
@@ -29,25 +41,25 @@
         <ion-item >
           Establish connection to server
           <div style="text-align: center" item-right >
-
+            {{ progressTracker.communication.passStep.length}}/{{ progressTracker.communication.count}}
           </div>
         </ion-item>
         <ion-item >
           Load assigned organisation unit(s)
           <div style="text-align: center" item-right >
-
+            {{ progressTracker.organisationUnit.passStep.length}}/{{ progressTracker.organisationUnit.count}}
           </div>
         </ion-item>
         <ion-item >
           Load aggregate metadata
           <div style="text-align: center" item-right >
-
+            {{ progressTracker.entryForm.passStep.length}}/{{ progressTracker.entryForm.count}}
           </div>
         </ion-item>
         <ion-item >
           Load tracker metadata
           <div style="text-align: center" item-right >
-
+            {{ progressTracker.event.passStep.length}}/{{ progressTracker.event.count}}
           </div>
         </ion-item>
       </ion-list>
