increase size of close icons on every modal as well as enable setting sync tab always open and selected setting tab colored

--- a/src/pages/data-set-selection/data-set-selection.html
+++ b/src/pages/data-set-selection/data-set-selection.html
@@ -4,7 +4,7 @@
       Data Entry Form selection
     </ion-title>
     <ion-buttons start>
-      <button ion-button (click)="dismiss()">
+      <button class="normalButton" ion-button full large (click)="dismiss()">
         <ion-icon name="md-close"></ion-icon>
       </button>
     </ion-buttons>
