--- a/src/pages/event-field-selection-menu/event-field-selection-menu.html
+++ b/src/pages/event-field-selection-menu/event-field-selection-menu.html
@@ -10,7 +10,7 @@
       Event List Fields selection
     </ion-title>
     <ion-buttons start>
-      <button ion-button (click)="dismiss()">
+      <button class="normalButton" ion-button full large  (click)="dismiss()">
         <ion-icon name="md-close"></ion-icon>
       </button>
     </ion-buttons>
