--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -4,7 +4,7 @@
       Organisation unit selection
     </ion-title>
     <ion-buttons start>
-      <button ion-button (click)="dismiss()">
+      <button class="normalButton" ion-button full large (click)="dismiss()">
         <ion-icon name="md-close"></ion-icon>
       </button>
     </ion-buttons>
